Add list of monitors as HTML
