# api/controllers/monitors.js
@@ -2,9 +2,11 @@
 var util = require('util');
 var monitors = require('../helpers/monitors.js');
 var errors = require('../helpers/errors.js');
+var json2html = require('json-to-html');
 
 module.exports = {
   getMonitorList: getMonitorList,
+  getMonitorListAsHtml: getMonitorListAsHtml,
   getMonitor: getMonitor
 };
 
@@ -12,6 +14,25 @@ function getMonitorList(req, res) {
   res.format({
     'application/json': function () {
       res.json(monitors.list);
+    },
+    'default': function () {
+      res.status(406).json(errors.not_acceptable);
+    },
+  });
+}
+
+function getMonitorListAsHtml(req, res) {
+  res.format({
+    'text/html': function () {
+      res.send(
+        "<!DOCTYPE html>\n"
+      + "<html><head>\n"
+      + "<style type=\"text/css\">.string{color:blue}.number{color:red}</style>\n"
+      + "</head><body><h1>Monitors</h1>\n"
+      + "<pre>"
+      + json2html(monitors.list)
+      + "</pre></body></html>"
+      );
     },
     'default': function () {
       res.status(406).json(errors.not_acceptable);
